# CPS

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: CMakeFunctions.cmake
include/: Calculator.h
include/frontend/: AcConversionComponent.h  ComplexTransformerComponent.h  Component.h  ConvFilterCorComponent.h  ConversionComponent.h  MainApp.h  Operation.h  OperationTypes.h  Option.h  Parameter.h  PlotComponent.h  PlottingComponent.h  SignalManagementComponent.h  SimulationComponent.h  ToDrawSignal.h
include/mediator/: Mediator.h  SignalMediator.h
include/operations/: Calculator.h  SignalProcesor.h
include/signals/: ContinousSignal.h  DiscreteSignal.h  GaussianNoise.h  ImpulseNoise.h  Quantization.h  QuantizationClipped.h  QuantizationRounded.h  RectangularSignal.h  RectangularSymmetricSignal.h  Sampling.h  Signal.h  SignalStrategy.h  SignalTypes.h  SinusoidalOneHalfRectifiedSignal.h  SinusoidalSignal.h  SinusoidalTwoHalfRectifiedSignal.h  SquareSignal.h  TriangularSignal.h  UniformNoise.h  UnitImpulseSignal.h  UnitJumpSignal.h  allBaseSignals.h  allSignals.h
include/signals/ADC/: Quantization.h  Sampling.h
include/signals/DAC/: ReconstructionZeroOrderHold.h
include/signals/baseSignals/: ContinousSignal.h  DiscreteSignal.h  DiscreteSignalStatic.h  GaussianNoise.h  ImpulseNoise.h  OperationResultSignal.h  RectangularSignal.h  RectangularSymmetricSignal.h  Signal.h  SignalStrategy.h  SinusoidalOneHalfRectifiedSignal.h  SinusoidalSignal.h  SinusoidalTwoHalfRectifiedSignal.h  TriangularSignal.h  UniformNoise.h  UnitImpulseSignal.h  UnitJumpSignal.h
include/signals/complexSignals/: ComplexSignal.h  DiscreteComplexSignal.h  DiscreteComplexSignalStatic.h
include/signals/filters/: BandPassFilter.h  ConvolutionSignal.h  CorrelationSignal.h  HighPassFilter.h  LowPassFilter.h
include/signals/operations/: SignalProcesor.h
include/signals/signalConversion/: OperationTypes.h  allConversionSignals.h
include/signals/signalConversion/ADC/: Quantization.h  QuantizationClipped.h  QuantizationRounded.h  Sampling.h
include/signals/signalConversion/DAC/: Reconstruction.h  ReconstructionFirstOrderHold.h  ReconstructionSincBased.h  ReconstructionZeroOrderHold.h
include/signals/simulation/: DistanceSensor.h  Environment.h  SimulatedSignal.h
include/signals/transformers/: ComplexTransform.h  DIFFastFourierTransform.h  DITFastFourierTransform.h  DiscreteCosineTransform.h  DiscreteFourierTransform.h  FastCosineTransform.h  FastWalshHadamardTransform.h  RealTransform.h  SignalTransformer.h  WalshHadamardTransform.h  WaveletTransform.h
include/signals/windows/: HammingWindow.h  HanningWindow.h  RectangularWindow.h
include/simulation/: DistanceSensor.h  Environment.h  SimulatedSignal.h
include/windows/: BlackmanWindow.h  HammingWindow.h  HanningWindow.h  RectangularWindow.h  Window.h
libs/: matplotlibcpp.h
src/: CMakeLists.txt  Calculator.cpp  Calculator.h  main.cpp
src/frontend/: AcConversionComponent.cpp  ComplexTransformerComponent.cpp  Component.cpp  ConvFilterCorComponent.cpp  ConversionComponent.cpp  MainApp.cpp  Operation.cpp  Option.cpp  Parameter.cpp  PlotComponent.cpp  PlottingComponent.cpp  SignalManagementComponent.cpp  SimulationComponent.cpp  ToDrawSignal.cpp
src/mediator/: SignalMediator.cpp
src/operations/: Calculator.cpp  SignalFileOperation.cpp  SignalProcesor.cpp
src/run/: main.cpp
src/signals/: ContinousSignal.cpp  DiscreteSignal.cpp  GaussianNoise.cpp  ImpulseNoise.cpp  Quantization.cpp  QuantizationClipped.cpp  QuantizationRounded.cpp  RectangularSignal.cpp  RectangularSymmetricSignal.cpp  Sampling.cpp  Signal.cpp  SignalStrategy.cpp  SinusoidalOneHalfRectifiedSignal.cpp  SinusoidalSignal.cpp  SinusoidalTwoHalfRectifiedSignal.cpp  SquareSignal.cpp  TriangularSignal.cpp  UniformNoise.cpp  UnitImpulseSignal.cpp  UnitJumpSignal.cpp
src/signals/ADC/: Quantization.cpp  QuantizationClipped.cpp  QuantizationRounded.cpp  Sampling.cpp
src/signals/DAC/: ReconstructionFirstOrderHold.cpp  ReconstructionSincBased.cpp  ReconstructionZeroOrderHold.cpp
src/signals/baseSignals/: ContinousSignal.cpp  DiscreteSignal.cpp  DiscreteSignalStatic.cpp  GaussianNoise.cpp  ImpulseNoise.cpp  OperationResultSignal.cpp  RectangularSignal.cpp  RectangularSymmetricSignal.cpp  Signal.cpp  SignalStrategy.cpp  SinusoidalOneHalfRectifiedSignal.cpp  SinusoidalSignal.cpp  SinusoidalTwoHalfRectifiedSignal.cpp  TriangularSignal.cpp  UniformNoise.cpp  UnitImpulseSignal.cpp  UnitJumpSignal.cpp
src/signals/complexSignals/: ComplexSignal.cpp  DiscreteComplexSignal.cpp  DiscreteComplexSignalStatic.cpp
src/signals/filters/: BandPassFilter.cpp  ConvolutionSignal.cpp  CorrelationSignal.cpp  HighPassFilter.cpp  LowPassFilter.cpp
src/signals/operations/: SignalProcesor.cpp
src/signals/signalConversion/ADC/: Quantization.cpp  QuantizationClipped.cpp  QuantizationRounded.cpp  Sampling.cpp
src/signals/signalConversion/DAC/: Reconstruction.cpp  ReconstructionFirstOrderHold.cpp  ReconstructionSincBased.cpp  ReconstructionZeroOrderHold.cpp
src/signals/simulation/: DistanceSensor.cpp  Environment.cpp  SimulatedSignal.cpp
src/signals/transformers/: ComplexTransform.cpp  DIFFastFourierTransform.cpp  DITFastFourierTransform.cpp  DiscreteCosineTransform.cpp  DiscreteFourierTransform.cpp  FastCosineTransform.cpp  FastWalshHadamardTransform.cpp  SignalTransformer.cpp  WalshHadamardTransform.cpp  WaveletTransform.cpp
src/signals/windows/: BlackmanWindow.cpp  HammingWindow.cpp  HanningWindow.cpp  RectangularWindow.cpp  Window.cpp
src/simulation/: DistanceSensor.cpp  Environment.cpp  SimulatedSignal.cpp
src/windows/: BlackmanWindow.cpp  HammingWindow.cpp  HanningWindow.cpp  RectangularWindow.cpp  Window.cpp
